Fixing footer items on tablet

--- a/assets/scss/_footer.scss
+++ b/assets/scss/_footer.scss
@@ -32,5 +32,18 @@ footer > .container{
         padding: 0.2rem 1.3rem 0 1.3rem;
     }
 }
-@media only screen and (min-width: 760px) {}
-@media only screen and (min-width: 1034px) {}
+@media only screen and (min-width: 760px) {
+    #ftr{
+        img{
+            width: 32px;
+            height: 32px;
+        }
+        .ftr__title,
+        .ftr__group{
+            text-transform: none
+        }
+    }
+}
+@media only screen and (min-width: 1034px) {
+    #ftr{}
+}
